# apertium-zho-spa

./: .gitattributes  Makefile  Makefile.am  README  apertium-zho-spa.spa-zho.lrx  apertium-zho-spa.zho-spa.dix  apertium-zho-spa.zho-spa.lrx  apertium-zho-spa.zho-spa.t1x  apertium-zho-spa.zho-spa.t2x  apertium-zho-spa.zho-spa.t3x  apertium-zho-spa.zho.dix  configure.ac  modes.xml
dev/: Makefile  adj.dix  adj2.dix  adv.dix  bilingue4.dix  cobertura.sh  conj.dix  dicc.zh-es.txt  dicc14.zh.txt  dicc15.zh.dix.txt  dicc15.zh.txt  evaluacio3.txt  name.dix  num.dix  prn.dix  total.zh.dix  totalama.dix  verb.dix  withtags-to-dix.py  withtags.txt  withtags2.txt  withtags3.txt  withtags4.txt  zho-wiki.py  zho.dix
dev/testvoc/: inconsistency-summary.sh  inconsistency.sh  testvoc-summary.zho-spa.txt  testvoc.sh
texts/: cuento.zho.referencia.txt  cuento.zho.stanford.txt  cuento.zho.txt  cuento.zho.zhseg.txt  cuento2.zho.zhseg.txt
